--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -786,6 +786,7 @@
                     <a href="/service-data.html" target="_blank">Info</a>
                     <a href="/config-data.html" target="_blank">Config</a>
                     <a href="/config-patterns.html" target="_blank">Patterns</a>
+                    <a href="/mt5-logs.html" target="_blank">MT5 Logs</a>
                     <a href="/data/docs" target="_blank">API Docs</a>
                 </div>
             </div>
