feat: add initial configuration page for RAG service with overview, scheduler, documents, and query tabs

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -824,6 +824,7 @@
                 </div>
                 <div class="service-links">
                     <a href="/service-rag.html" target="_blank">Info</a>
+                    <a href="/config-rag.html" target="_blank">Config</a>
                     <a href="/rag/docs" target="_blank">API Docs</a>
                 </div>
             </div>
@@ -842,6 +843,7 @@
                 </div>
                 <div class="service-links">
                     <a href="/service-llm.html" target="_blank">Info</a>
+                    <a href="/config-llm.html" target="_blank">Config</a>
                     <a href="/llm/docs" target="_blank">API Docs</a>
                 </div>
             </div>
