feat: enhance pagination and filtering in document listing with improved page size options

--- a/docker/services/frontend/html/config-llm.html
+++ b/docker/services/frontend/html/config-llm.html
@@ -555,7 +555,7 @@
     <div class="container">
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab-btn active" onclick="switchTab('overview')">Ubersicht</button>
+            <button class="tab-btn active" onclick="switchTab('overview')">Übersicht</button>
             <button class="tab-btn" onclick="switchTab('chat')">Chat</button>
             <button class="tab-btn" onclick="switchTab('recommendations')">Empfehlungen</button>
         </div>
