--- a/docker/services/frontend/html/config-rag.html
+++ b/docker/services/frontend/html/config-rag.html
@@ -601,7 +601,7 @@
     <div class="container">
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab-btn active" onclick="switchTab('overview')">Ubersicht</button>
+            <button class="tab-btn active" onclick="switchTab('overview')">Übersicht</button>
             <button class="tab-btn" onclick="switchTab('scheduler')">Auto-Fetch</button>
             <button class="tab-btn" onclick="switchTab('documents')">Dokumente</button>
             <button class="tab-btn" onclick="switchTab('query')">Suche</button>
@@ -818,6 +818,13 @@
                     <select class="filter-select" id="symbol-filter" onchange="filterDocuments()">
                         <option value="">Alle Symbole</option>
                     </select>
+                    <select class="filter-select" id="page-size" onchange="filterDocuments()">
+                        <option value="50">50 pro Seite</option>
+                        <option value="100" selected>100 pro Seite</option>
+                        <option value="250">250 pro Seite</option>
+                        <option value="500">500 pro Seite</option>
+                        <option value="1000">Alle</option>
+                    </select>
                     <button class="btn btn-primary" onclick="loadDocuments()">Aktualisieren</button>
                 </div>
                 <div class="table-container">
@@ -834,6 +841,8 @@
                             <tr><td colspan="4" style="text-align: center; opacity: 0.5;">Lade Dokumente...</td></tr>
                         </tbody>
                     </table>
+                </div>
+                <div class="pagination" id="pagination-container" style="display: flex; justify-content: center; align-items: center; gap: 0.5rem; margin-top: 1rem; flex-wrap: wrap;">
                 </div>
             </div>
         </div>
@@ -877,6 +886,8 @@
     <script>
         const API_BASE = '/rag/api/v1';
         let allDocuments = [];
+        let filteredDocuments = [];
+        let currentPage = 1;
         let schedulerInterval = null;
 
         // Tab switching
@@ -1174,11 +1185,11 @@
         // Load documents
         async function loadDocuments() {
             try {
-                const res = await fetch(`${API_BASE}/rag/documents`);
+                const res = await fetch(`${API_BASE}/rag/documents?limit=10000`);
                 const data = await res.json();
 
                 allDocuments = data.documents || [];
-                document.getElementById('docs-total').textContent = `${allDocuments.length} Dokumente`;
+                document.getElementById('docs-total').textContent = `${data.total || allDocuments.length} Dokumente`;
 
                 // Populate filters
                 const types = [...new Set(allDocuments.map(d => d.document_type).filter(Boolean))].sort();
@@ -1192,6 +1203,7 @@
                 symbolFilter.innerHTML = '<option value="">Alle Symbole</option>' +
                     symbols.map(s => `<option value="${s}">${s}</option>`).join('');
 
+                currentPage = 1;
                 filterDocuments();
             } catch (err) {
                 console.error('Documents load error:', err);
@@ -1206,20 +1218,34 @@
             const typeFilter = document.getElementById('type-filter').value;
             const symbolFilter = document.getElementById('symbol-filter').value;
 
-            const filtered = allDocuments.filter(d => {
+            filteredDocuments = allDocuments.filter(d => {
                 const matchSearch = !search || (d.content || '').toLowerCase().includes(search);
                 const matchType = !typeFilter || d.document_type === typeFilter;
                 const matchSymbol = !symbolFilter || d.symbol === symbolFilter;
                 return matchSearch && matchType && matchSymbol;
             });
 
+            // Reset to page 1 when filters change
+            currentPage = 1;
+            renderDocuments();
+        }
+
+        // Render documents with pagination
+        function renderDocuments() {
+            const pageSize = parseInt(document.getElementById('page-size').value);
+            const totalPages = Math.ceil(filteredDocuments.length / pageSize);
+            const startIdx = (currentPage - 1) * pageSize;
+            const endIdx = startIdx + pageSize;
+            const pageDocuments = filteredDocuments.slice(startIdx, endIdx);
+
             const tbody = document.getElementById('docs-tbody');
-            if (filtered.length === 0) {
+            if (filteredDocuments.length === 0) {
                 tbody.innerHTML = '<tr><td colspan="4" style="text-align: center; opacity: 0.5;">Keine Dokumente gefunden</td></tr>';
+                document.getElementById('pagination-container').innerHTML = '';
                 return;
             }
 
-            tbody.innerHTML = filtered.slice(0, 100).map(doc => {
+            tbody.innerHTML = pageDocuments.map(doc => {
                 const content = (doc.content || '').substring(0, 150) + ((doc.content || '').length > 150 ? '...' : '');
                 const created = doc.created_at ? new Date(doc.created_at).toLocaleDateString('de-DE') : '-';
                 return `
@@ -1232,9 +1258,66 @@
                 `;
             }).join('');
 
-            if (filtered.length > 100) {
-                tbody.innerHTML += `<tr><td colspan="4" style="text-align: center; opacity: 0.5;">... und ${filtered.length - 100} weitere</td></tr>`;
+            // Render pagination
+            renderPagination(totalPages);
+        }
+
+        // Render pagination controls
+        function renderPagination(totalPages) {
+            const container = document.getElementById('pagination-container');
+
+            if (totalPages <= 1) {
+                container.innerHTML = `<span style="opacity: 0.7;">${filteredDocuments.length} Dokumente</span>`;
+                return;
             }
+
+            let html = `<span style="opacity: 0.7; margin-right: 1rem;">${filteredDocuments.length} Dokumente | Seite ${currentPage} von ${totalPages}</span>`;
+
+            // Previous button
+            html += `<button class="btn btn-sm" onclick="goToPage(${currentPage - 1})" ${currentPage === 1 ? 'disabled' : ''}>«</button>`;
+
+            // Page numbers (show max 7 pages)
+            const maxButtons = 7;
+            let startPage = Math.max(1, currentPage - Math.floor(maxButtons / 2));
+            let endPage = Math.min(totalPages, startPage + maxButtons - 1);
+
+            if (endPage - startPage < maxButtons - 1) {
+                startPage = Math.max(1, endPage - maxButtons + 1);
+            }
+
+            if (startPage > 1) {
+                html += `<button class="btn btn-sm" onclick="goToPage(1)">1</button>`;
+                if (startPage > 2) html += `<span style="opacity: 0.5;">...</span>`;
+            }
+
+            for (let i = startPage; i <= endPage; i++) {
+                const active = i === currentPage ? 'btn-primary' : '';
+                html += `<button class="btn btn-sm ${active}" onclick="goToPage(${i})">${i}</button>`;
+            }
+
+            if (endPage < totalPages) {
+                if (endPage < totalPages - 1) html += `<span style="opacity: 0.5;">...</span>`;
+                html += `<button class="btn btn-sm" onclick="goToPage(${totalPages})">${totalPages}</button>`;
+            }
+
+            // Next button
+            html += `<button class="btn btn-sm" onclick="goToPage(${currentPage + 1})" ${currentPage === totalPages ? 'disabled' : ''}>»</button>`;
+
+            container.innerHTML = html;
+        }
+
+        // Go to specific page
+        function goToPage(page) {
+            const pageSize = parseInt(document.getElementById('page-size').value);
+            const totalPages = Math.ceil(filteredDocuments.length / pageSize);
+
+            if (page < 1 || page > totalPages) return;
+
+            currentPage = page;
+            renderDocuments();
+
+            // Scroll to top of table
+            document.getElementById('docs-table').scrollIntoView({ behavior: 'smooth', block: 'start' });
         }
 
         // Query section
