--- a/docker/services/frontend/html/config-rag.html
+++ b/docker/services/frontend/html/config-rag.html
@@ -627,6 +627,10 @@
                     <div class="stat-value" id="embedding-dim">-</div>
                     <div class="stat-label">Embedding Dimension</div>
                 </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="last-update" style="font-size: 1.25rem;">-</div>
+                    <div class="stat-label">Letzte Aktualisierung</div>
+                </div>
             </div>
 
             <div class="grid-2">
@@ -935,6 +939,24 @@
                 document.getElementById('total-types').textContent = Object.keys(data.documents_by_type || {}).length;
                 document.getElementById('total-symbols').textContent = Object.keys(data.documents_by_symbol || {}).length;
                 document.getElementById('embedding-dim').textContent = data.embedding_dimension || '-';
+
+                // Fetch scheduler status for last update time
+                try {
+                    const schedRes = await fetch(`${API_BASE}/rag/scheduler/status`);
+                    const schedData = await schedRes.json();
+                    const lastFetch = schedData.scheduler?.last_fetch;
+                    if (lastFetch) {
+                        const d = new Date(lastFetch);
+                        document.getElementById('last-update').textContent = d.toLocaleString('de-DE', {
+                            day: '2-digit', month: '2-digit', year: 'numeric',
+                            hour: '2-digit', minute: '2-digit'
+                        });
+                    } else {
+                        document.getElementById('last-update').textContent = '-';
+                    }
+                } catch (e) {
+                    document.getElementById('last-update').textContent = '-';
+                }
 
                 // Update config
                 const modelParts = (data.embedding_model || '').split('/');
